--- a/descricaoPrincipal/style-principal.css
+++ b/descricaoPrincipal/style-principal.css
@@ -156,7 +156,8 @@ a {
 .modal-menu {
     position: fixed;
     top: 0;
-    right: -100%; /* Posiciona o menu fora da tela à direita */
+    right: -100%;
+    /* Posiciona o menu fora da tela à direita */
     width: 100%;
     height: 100%;
     background-color: #252160;
@@ -164,7 +165,8 @@ a {
     flex-direction: column;
     align-items: center;
     z-index: 100;
-    transition: right 0.5s ease; /* Controla o tempo da animação */
+    transition: right 0.5s ease;
+    /* Controla o tempo da animação */
 }
 
 .modal-menu .imagemLogo {
@@ -407,7 +409,7 @@ button {
 .VermelhoSapatilha,
 .AzulEscuroSapatilha,
 .AzulClaroSapatilha,
-.VerdeAguaSapatilha{
+.VerdeAguaSapatilha {
     width: 4vh;
     height: 4vh;
     border-radius: 50%;
@@ -461,30 +463,34 @@ button {
 }
 
 
-.img-Masc{
+.img-Masc {
     width: 400px;
     height: 500px;
 }
-.img-MascKit{
-    width:  300px;
+
+.img-MascKit {
+    width: 300px;
     height: 200px;
 }
-.img-MasMarrom{
+
+.img-MasMarrom {
     width: 400px;
     height: 300px;
 }
 
 
-/* CANO CURTO *//* ARRUMANDO AS IMAGENS PELO JSON */
-#Textodescricao{
+/* CANO CURTO */
+/* ARRUMANDO AS IMAGENS PELO JSON */
+#Textodescricao {
     margin-top: -4vh;
 }
 
 
 
 @media screen and (max-width: 768px) {
-       /*Cabeçalho*/
-       .cabecalhoUm {
+
+    /*Cabeçalho*/
+    .cabecalhoUm {
         justify-content: space-between;
         margin: 5px 20px;
     }
@@ -526,7 +532,7 @@ button {
         right: 0;
     }
 
-/*Fim cabeçalho*/
+    /*Fim cabeçalho*/
     .img-Masc-CanoCurtoMeia {
         width: 35vh;
         height: 28vh;
@@ -536,7 +542,7 @@ button {
         width: 60vh;
         height: 20vh;
     }
-    
+
 
     #titulo {
         font-size: 3.56vh;
@@ -770,6 +776,52 @@ a {
 /* VERSÃO MOBILE */
 
 @media screen and (max-width: 768px) {
+
+    /* CABEÇALHO */
+    .cabecalhoUm {
+        justify-content: space-between;
+        margin: 5px 20px;
+    }
+
+    .imagemLogo img {
+        width: 130px;
+    }
+
+    .imagemLogo {
+        flex: none;
+    }
+
+    .cabecalho2 {
+        display: none;
+    }
+
+    .menu-icon {
+        display: block;
+    }
+
+    .submenu {
+        display: none;
+    }
+
+    .menu-item.open .submenu {
+        display: block;
+    }
+
+    .menu-item:hover .submenu {
+        display: none;
+    }
+
+    #meiasBabyDesMasc {
+        padding-top: 15vh;
+        margin: 0 30px;
+    }
+
+    .modal-menu.show {
+        right: 0;
+    }
+
+    /* FIM DO CABEÇALHO */
+
     .container-rodape {
         padding: 50px 50px;
     }
@@ -833,7 +885,7 @@ a {
 
     }
 
-    .img-baby {
+    .img-descricao {
         width: 35vh;
         height: 30vh
     }
