--- a/descricaoKids/style-kids.css
+++ b/descricaoKids/style-kids.css
@@ -616,8 +616,6 @@ a {
 
     .numeracao {
         font-size: 3vh;
-        text-align: center;
-        /* Centralizar a numeração */
         margin-top: 1vh;
     }
 
@@ -895,5 +893,25 @@ a {
 
     .whats-rodape, .email-rodape {
         justify-content: center; /* Centraliza o conteúdo */
+    }
+
+    .todas-as-meias-baby-des-masc .Quadrado-da-meia-rendada img,
+    .todas-as-meias-baby-des-masc .Quadrado-da-meia-lhama img,
+    .todas-as-meias-baby-des-masc .Quadrado-da-meia-gata img{
+        width: 180px;
+        height: 140px;
+    }
+
+    #div-meia {
+        align-items: center;
+        width: 250px;
+        margin-top: 10vh;
+        margin: 10vh 10vh 0 10vh;
+
+    }
+
+    .botao-euQuero {
+        width: 150px;
+        height: 35px;
     }
 }
