--- a/descricaoBaby/style-baby.css
+++ b/descricaoBaby/style-baby.css
@@ -165,6 +165,7 @@ a {
     align-items: center;
     z-index: 100;
     transition: right 0.5s ease;
+    overflow-y: scroll;
     /* Controla o tempo da animação */
 }
 
