--- a/kidsfem.css
+++ b/kidsfem.css
@@ -166,6 +166,7 @@ a {
     align-items: center;
     z-index: 100;
     transition: right 0.5s ease; /* Controla o tempo da animação */
+    overflow-y: scroll;
 }
 
 .modal-menu .imagemLogo {
@@ -590,11 +591,16 @@ height: 200px;}
 
     #div-meia-kids-femino {
         align-items: center;
-        width: 300px;
+        width: 250px;
         margin-top: 10vh;
         border: 1px solid #A5A5A5;
         border-radius: 20px;
 
+    }
+
+    .botao-euQuero {
+        width: 200px;
+        height: 35px;
     }
 
     .kit-numero-um img,
@@ -605,9 +611,8 @@ height: 200px;}
     .kitGmeias img,
     .KitM-meias img,
     .KitP-meias img {
-        width: 300px;
-        height: 150px;
-        margin: 45px 30px;
+        width: 230px;
+        height: 100px;
     }
     .Quadrado-da-meia-cachorrinho img,
     .Quadrado-da-meia-joaninha img,
