--- a/kidsmas.css
+++ b/kidsmas.css
@@ -580,11 +580,16 @@ a {
 
     #div-meia-kids-femino {
         align-items: center;
-        width: 300px;
+        width: 250px;
         margin-top: 10vh;
         border: 1px solid #A5A5A5;
         border-radius: 20px;
 
+    }
+
+    .botao-euQuero {
+        width: 200px;
+        height: 35px;
     }
 
 
@@ -607,9 +612,8 @@ a {
     .kitGmeias img,
     .KitM-meias img,
     .KitP-meias img {
-        width: 300px;
-        height: 150px;
-        margin: 45px 30px;
+        width: 230px;
+        height: 100px;
     }
 
     .Quadrado-da-meia-polvo img,
