--- a/kidsfem.css
+++ b/kidsfem.css
@@ -559,7 +559,8 @@ height: 200px;}
     .titulo {
         font-family: "LibreFranklin";
         margin-left: 5vh;
-        margin-top: 15px;
+        margin-top: 5vh;
+        font-size: 3.45vh;
     }
 
     .subtitulo {
@@ -567,6 +568,7 @@ height: 200px;}
         font-weight: 300;
         margin-left: 7vh;
         margin-top: 1vh;
+        font-size: 3.45vh;
     }
 
     .subtitulo-m {
@@ -574,6 +576,7 @@ height: 200px;}
         font-weight: 300;
         margin-left: 7vh;
         margin-top: 10vh;
+        font-size: 3.45vh;
     }
 
     #meiasKidsFemino {
@@ -770,6 +773,9 @@ a {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
 }
 
 .categGeral-rodape {
@@ -788,8 +794,8 @@ a {
     margin-top: 10px;
 }
 
-.categorias-rodape {
-    margin-left: 213px;
+.categorias-rodape, .institucional-rodape {
+    margin: 20px 10px 0 10px;
 }
 
 .final-rodape {
@@ -820,7 +826,23 @@ a {
 
     .titulo-rodape {
         text-align: center;
-        font-size: 18px;
+        font-size: 3vh;
+    }
+
+    .texto-rodape{
+        font-size: 2.8vh;
+    }
+
+    .texto2-rodape{
+        font-size: 2.8vh;
+    }
+
+    .textoFinal-rodape{
+        font-size: 2.6vh;
+    }
+
+    .imgContatos-rodape{
+        width: 23px;
     }
 
     .acompanhe-rodape,
