--- a/CanoCurtoFem.css
+++ b/CanoCurtoFem.css
@@ -166,6 +166,7 @@ a {
     z-index: 100;
     transition: right 0.5s ease;
     /* Controla o tempo da animação */
+    overflow-y: scroll;
 }
 
 .modal-menu .imagemLogo {
@@ -682,6 +683,9 @@ a {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
 }
 
 .categGeral-rodape {
@@ -700,8 +704,8 @@ a {
     margin-top: 10px;
 }
 
-.categorias-rodape {
-    margin-left: 213px;
+.categorias-rodape, .institucional-rodape {
+    margin: 20px 10px 0 10px;
 }
 
 .final-rodape {
@@ -737,7 +741,23 @@ a {
 
     .titulo-rodape {
         text-align: center;
-        font-size: 18px;
+        font-size: 3vh;
+    }
+
+    .texto-rodape{
+        font-size: 2.8vh;
+    }
+
+    .texto2-rodape{
+        font-size: 2.8vh;
+    }
+
+    .textoFinal-rodape{
+        font-size: 2.6vh;
+    }
+
+    .imgContatos-rodape{
+        width: 23px;
     }
 
     .acompanhe-rodape,
@@ -951,31 +971,36 @@ a {
     .Quadrado-da-meia-verde-cano-curto img,
     .Quadrado-da-meia-BrancaRosa-cano-curto img,
     .Quadrado-da-meia-pretaRosa-cano-curto img {
-
-        width: 220px;
-        height: 180px;
+        width: 150px;
+        height: 130px;
 
     }
 
     .container img {
-        width: 200px;
-        height: 166px;
+        width: 230px;
+        height: 100px;
     }
 
     #div-meia-cano-curto {
         align-items: center;
-        width: 300px;
+        width: 250px;
         margin-top: 10vh;
 
     }
 
     .titulo {
         margin-top: 5vh;
-        font-size: 3.55vh;
+        font-size: 3.45vh;
+    }
+
+    .botao-euQuero {
+        width: 200px;
+        height: 35px;
     }
 
     #containerkit img {
-        width: 300px;
-        height: 110px;
+        
+        width: 230px;
+        height: 100px;
     }
 }
