--- a/juvenilMasculina.css
+++ b/juvenilMasculina.css
@@ -164,6 +164,7 @@ a {
     align-items: center;
     z-index: 100;
     transition: right 0.5s ease; /* Controla o tempo da animação */
+    overflow-y: scroll;
 }
 
 .modal-menu .imagemLogo {
@@ -697,7 +698,13 @@ a {
     .titulo {
         font-family: "LibreFranklin";
         margin-left: 5vh;
-        margin-top: 15px;
+        margin-top: 5vh;
+        font-size: 3.45vh;
+    }
+
+    .botao-euQuero {
+        width: 200px;
+        height: 35px;
     }
 
     .subtitulo {
@@ -729,7 +736,7 @@ a {
 
     #div-meia {
         align-items: center;
-        width: 300px;
+        width: 250px;
         margin-top: 10vh;
         border: 1px solid #A5A5A5;
         border-radius: 20px;
@@ -737,9 +744,8 @@ a {
     }
 
     .Quadrado-da-meia-esportiva-kit01 img, .Quadrado-da-meia-esportiva-cano-curto-kit img{
-        width: 300px;
-        height: 200px;
-        margin: 45px 30px;
+        width: 230px;
+        height: 100px;
     }
 
 }
@@ -885,6 +891,9 @@ a {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
 }
 
 .categGeral-rodape {
@@ -903,8 +912,8 @@ a {
     margin-top: 10px;
 }
 
-.categorias-rodape {
-    margin-left: 213px;
+.categorias-rodape, .institucional-rodape {
+    margin: 20px 10px 0 10px;
 }
 
 .final-rodape {
@@ -935,7 +944,23 @@ a {
 
     .titulo-rodape {
         text-align: center;
-        font-size: 18px;
+        font-size: 3vh;
+    }
+
+    .texto-rodape{
+        font-size: 2.8vh;
+    }
+
+    .texto2-rodape{
+        font-size: 2.8vh;
+    }
+
+    .textoFinal-rodape{
+        font-size: 2.6vh;
+    }
+
+    .imgContatos-rodape{
+        width: 23px;
     }
 
     .acompanhe-rodape,
