--- a/esportvaMasc.css
+++ b/esportvaMasc.css
@@ -430,6 +430,7 @@ body {
 .container {
     display: flex;
     justify-content: center;
+    margin: 30px 0;
 }
 
 .Quadrado-da-meia-esportiva-kit01 img,
@@ -786,7 +787,7 @@ body {
 
 @media (max-width: 768px) {
     .container {
-        margin: 50px;
+        margin: 50px 0;
     }
 
     /* CABEÇALHO */
@@ -860,9 +861,9 @@ body {
     .Quadrado-da-meia-CanoCurto-LisaKit03 img,
     .Quadrado-da-meia-CanoCurto-Desenhada-Kit02 img,
     .Quadrado-da-meia-CanoCurto-Desenhada-Kit01 img {
-        width: 280px;
-        height: 140px;
-        margin-top: 4vh;
+        width: 230px;
+        height: 90px;
+        margin-top: 0;
     }
 
     /* MOBILE CANO CURTO */
