--- a/kidsfem.css
+++ b/kidsfem.css
@@ -443,6 +443,7 @@ height: 200px;}
 .container {
     display: flex;
     justify-content: center;
+    margin: 30px 0;
 }
 
 
@@ -595,7 +596,7 @@ height: 200px;}
     #div-meia-kids-femino {
         align-items: center;
         width: 250px;
-        margin-top: 10vh;
+        margin: 10vh 4vh 0 4vh;
         border: 1px solid #A5A5A5;
         border-radius: 20px;
 
