--- a/kidsmas.css
+++ b/kidsmas.css
@@ -584,7 +584,7 @@ a {
     #div-meia-kids-femino {
         align-items: center;
         width: 250px;
-        margin-top: 10vh;
+        margin: 10vh 4vh 0 4vh;
         border: 1px solid #A5A5A5;
         border-radius: 20px;
 
